dataset1235/2025-2/2318198438/users/867892000/executions/2445341515_3306861601.log
== SUBMISSION (2025-09-02 00:16:02)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input(""))
apotema = (lado)/(2*tan(pi/2))
area = (9/2)*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
0.0
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
0.0
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
0.0
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
0.0
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:15:34)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input(""))
apotema = (lado)/(2*tan(pi/2))
area = (9/2)*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
0.0
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
0.0
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
0.0
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
0.0
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:16:23)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input(""))
apotema = (lado)/((2*tan(pi/2))
area = (9/2)*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
File "XXXX", line 5
    apotema = (lado)/((2*tan(pi/2))
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
File "XXXX", line 5
    apotema = (lado)/((2*tan(pi/2))
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
File "XXXX", line 5
    apotema = (lado)/((2*tan(pi/2))
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
File "XXXX", line 5
    apotema = (lado)/((2*tan(pi/2))
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
File "XXXX", line 5
    apotema = (lado)/((2*tan(pi/2))
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
File "XXXX", line 5
    apotema = (lado)/((2*tan(pi/2))
                     ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:17:14)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input(""))
apotema = lado / (2*tan(pi/9))
area = (9/2)*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
55.64
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
748.0
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
395.64
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
222.55
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
98.91
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
154.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:15:42)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input(""))
apotema = (lado)/(2*tan(pi/2))
area = (9/2)*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
0.0
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
0.0
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
0.0
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
0.0
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:17:20)
-- CODE: 
from math import *

# faça seu código aqui!
lado = int(input(""))
apotema = lado / (2*tan(pi/9))
area = (9/2)*lado*apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
55.64
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
748.0
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
395.64
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
222.55
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
98.91
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
154.55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
